Minor efficiency enhancement: use Long.valueOf() instead of new Long().
git-svn-id: http://svn.topazproject.org/svn/head@6866 48088309-b40f-0410-b149-b14953253675